--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
     aaptOptions {
         cruncherEnabled = false
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
