Done basic setup for MVVM.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,11 +59,25 @@ dependencies {
     def lifecycle_version = '2.2.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
-    // Retrofit
-    def retrofitVersion = "2.5.0"
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    // Retorfit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
-    def multidex_version = "2.0.1"
-    implementation "androidx.multidex:multidex:$multidex_version"
+//    def multidex_version = "2.0.1"
+//    implementation "androidx.multidex:multidex:$multidex_version"
+
+//    def rxcalladapter_version = '2.5.0'
+//    implementation "com.squareup.retrofit2:adapter-rxjava2:$rxcalladapter_version" // Retrofit call adapter
+
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+
+    // Rx Java
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    // Reactive Streams (convert Observable to LiveData)
+    def reactivestreams_version = "1.1.1"
+    implementation "android.arch.lifecycle:reactivestreams:$reactivestreams_version"
+
+
 }
