--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,8 @@ dependencies {
     implementation "android.arch.lifecycle:reactivestreams:$reactivestreams_version"
 
 
+    // Kotlin
+    def nav_version = "2.3.0-beta01"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
